Fix layout shift of fixed floating action button

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -52,6 +52,12 @@ button {
   height: 70px;
   background-color: slategrey;
 }
+
+
+[data-scroll-lock] .button--help {
+  margin-right: var(--scrollbar-compensation);
+}
+
 .quick-view-modal {
   position: fixed;
   top: 50%;
